@@ -5,6 +5,7 @@ import com.example.employeemanagement.dto.response.UserResponse;
 import com.example.employeemanagement.model.Person;
 import com.example.employeemanagement.model.Role;
 import com.example.employeemanagement.model.User;
+import com.example.employeemanagement.model.UserRole;
 import com.example.employeemanagement.model.enums.Roles;
 import com.example.employeemanagement.repository.PersonRepository;
 import com.example.employeemanagement.repository.RoleRepository;
@@ -14,6 +15,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.HashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -23,15 +25,14 @@ public class UserMapper {
     private final RoleRepository roleRepository;
 
     public UserResponse toUserResponse(User user) {
-        if (user == null) {
-            return null;
-        }
         return UserResponse.builder()
                 .id(user.getId())
                 .email(user.getEmail())
                 .isActive(user.isActive())
                 .personName(user.getPerson().getFull_name())
-                .roleName(user.getRoles().stream().map(Role::getRole).toList())
+                .roleName(user.getRoles().stream()
+                        .map(Role::getRole)
+                        .collect(Collectors.toList()))
                 .build();
     }
 
@@ -43,7 +44,6 @@ public class UserMapper {
                 .orElseThrow(() -> new RuntimeException("Person not found"));;
         Set<Role> roles;
         if (userRequest.getRoleId() == null || userRequest.getRoleId().isEmpty()) {
-            // gán mặc định USER
             Role defaultRole = roleRepository.findByRole(Roles.USER)
                     .orElseThrow(() -> new RuntimeException("Default USER role not found"));
             roles = new HashSet<>();
@@ -51,12 +51,20 @@ public class UserMapper {
         } else {
             roles = new HashSet<>(roleRepository.findAllById(userRequest.getRoleId()));
         }
+
         User user = new User();
         user.setEmail(userRequest.getEmail());
         user.setActive(userRequest.isActive());
         user.setPassword(userRequest.getPassword());
         user.setPerson(person);
-        user.setRoles(roles);
+        Set<UserRole> userRoles = new HashSet<>();
+        for (Role role : roles) {
+            UserRole ur = new UserRole();
+            ur.setRole(role);
+            ur.setUser(user);
+            userRoles.add(ur);
+        }
+        user.setUserRoles(userRoles);
         return user;
     }
 
@@ -66,11 +74,20 @@ public class UserMapper {
         }
         Set<Role> roles = new HashSet<>(roleRepository.findAllById(userRequest.getRoleId()));
         Person person = personRepository.findById(userRequest.getPersonId())
-                .orElseThrow(() -> new RuntimeException("Person not found"));;        user.setEmail(userRequest.getEmail());
+                .orElseThrow(() -> new RuntimeException("Person not found"));
+        user.setEmail(userRequest.getEmail());
         user.setPassword(userRequest.getPassword());
         user.setPerson(person);
         user.setActive(userRequest.isActive());
-        user.setRoles(roles);
+        user.getUserRoles().clear();
+
+        for(Role role : roles) {
+            UserRole ur = new UserRole();
+            ur.setRole(role);
+            ur.setUser(user);
+            user.getUserRoles().add(ur);
+        }
+
         return user;
     }
 }
